Create part 2 of report

--- a/output/main_2.tex
+++ b/output/main_2.tex
@@ -1,9 +1,9 @@
 
 % Table created by stargazer v.5.2.3 by Marek Hlavac, Social Policy Institute. E-mail: marek.hlavac at gmail.com
-% Date and time: Sat, Dec 23, 2023 - 2:51:19 PM
+% Date and time: Sat, Dec 23, 2023 - 8:07:23 PM
 \begin{table}[!htbp] \centering 
   \caption{Two-Way ANOVA between weight loss and main effects} 
-  \label{tab::simple_1} 
+  \label{tab::main_2} 
 \begin{tabular}{@{\extracolsep{5pt}}lc} 
 \\[-1.8ex]\hline 
 \hline \\[-1.8ex] 
